# conan-splinter

./: CMakeLists.txt  README.md  conanfile.py  run_debug.bat  run_release.bat
splinter/include/: bspline.h  bsplinebasis.h  bsplinebasis1d.h  bsplinebuilder.h  datapoint.h  datatable.h  definitions.h  function.h  knots.h  linearsolvers.h  mykroneckerproduct.h  saveable.h  serializer.h  utilities.h
splinter/include/cinterface/: cinterface.h  utilities.h
splinter/src/: bspline.cpp  bsplinebasis.cpp  bsplinebasis1d.cpp  bsplinebuilder.cpp  datapoint.cpp  datatable.cpp  function.cpp  knots.cpp  mykroneckerproduct.cpp  serializer.cpp  utilities.cpp
splinter/src/cinterface/: bspline.cpp  bsplinebuilder.cpp  cinterface.cpp  datatable.cpp  utilities.cpp
test/: main.cpp
